--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <button type="submit">Add item</button>
     </form>
 
-    <ul class="shopping-list">
-      <li>
-        <span class="shopping-item">apples</span>
+    <ul class="js-shopping-list shopping-list">
+      <!-- <li>
+        <span class="js-shopping-item shopping-item">apples</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
             <span class="button-label">check</span>
@@ -32,7 +32,7 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item">oranges</span>
+        <span class="js-shopping-item shopping-item">oranges</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
             <span class="button-label">check</span>
@@ -43,7 +43,7 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item shopping-item__checked">milk</span>
+        <span class="js-shopping-item shopping-item shopping-item__checked">milk</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
             <span class="button-label">check</span>
@@ -54,7 +54,7 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item">bread</span>
+        <span class="js-shopping-item shopping-item">bread</span>
         <div class="shopping-item-controls">
           <button class="shopping-item-toggle">
             <span class="button-label">check</span>
@@ -63,9 +63,13 @@
             <span class="button-label">delete</span>
           </button>
         </div>
-      </li>
+      </li> -->
     </ul>
   </div>
-
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="app.js"></script>
 </body>
 </html>
